update name change

--- a/vanilla-search.html
+++ b/vanilla-search.html
@@ -145,6 +145,6 @@
     <h3>ABOUT THE AUTHOR</h3>
     <p>James Dunne - Producer, CBC News Business</p>
     <!-- <script src="index.js"></script> -->
-    <script src="index-abstracted.js"></script>
+    <script src="index-oop.js"></script>
 </body>
 </html>
